--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>currency_converter</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+    <link rel="stylesheet" href="responsive.css">
     <link rel="icon" type="x-icon/image" href="favicon.ico">
 </head>
 <body>
